[package]
authors = ['Alfredo Lopez <alfredolopez80@gmail.com>']
description = 'FRAME pallet blocktime, for task of Fluency Recruitment process.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-blocktime'
repository = 'https://github.com/alfredolopez80/fluency-pallet-blocktime.git'
version = '2.0.1'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { version = "1.0.101", optional = true }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-timestamp = { version = "2.0.0", default-features = false }
pallet-timestamp = { default-features = false, version = '2.0.1' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    "sp-inherents/std",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "serde",
    "frame-system/std",
    "sp-timestamp/std",
    "pallet-timestamp/std",
]
